--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,12 +3,154 @@
     background-color: rgb(235, 239, 238);
 }
 
-svg.footer_logo 
+.header_footer
 {
-    image
-    {
-        object-fit: contain;
-        height: 44px;
-        width: 44px;
-    }
+    display: grid;
+    grid-template-columns: auto auto;
+    color: rgb(11, 133, 110);
+
+
+    /*
+        column-gap: 2rem;
+        row-gap: 6rem;
+    */
+}
+
+.header_footer_logo
+{
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.header_footer_svg
+{
+    width: 44px;
+    height: 42px;
+}
+
+.header_footer_links
+{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
+
+.header_footer_button
+{
+    border: none;
+    background-color: inherit;
+    color: inherit;
+}
+
+.header_main_body
+{
+    width: 1663px;
+    height: 738px;
+    display: flex;
+    flex-flow: column wrap;
+}
+
+.header_main_flowers_border
+{
+    background-color: rgb(255, 255, 255);
+    padding: 1rem;
+}
+
+.header_main_flowers_collection
+{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: center;
+
+
+    /*
+        background-color: rgb(195, 215, 44);
+        height: 0px;;
+        max-height: 504px;
+        max-width: 868px;
+    */
+}
+
+.header_main_flowers_subsidiary_1
+{
+    display: inherit;
+    grid-template-columns: auto;
+    justify-content: inherit;
+ 
+    /*
+        background-color: blue;
+        height: 0px;
+        max-height: inherit;
+        max-width: 33.3333333%;
+    */
+}
+
+.header_main_flowers_subsidiary_2
+{
+    display: inherit;
+    grid-template-rows: auto auto;
+    justify-content: inherit;
+
+    /*
+        background-color: rgb(168, 24, 67);
+        height: 0px;
+        max-height: 50%;
+        max-width: inherit;
+    */
+}
+
+.header_main_flowers_subsidiary_3
+{
+    display: inherit;
+    grid-template-columns: auto auto;
+    justify-content: inherit;
+ 
+    /*
+        background-color: rgb(43, 168, 24);
+        height: 0px;
+        max-height: inherit;
+        max-width: 50%;
+    */
+}
+
+.header_main_flower_img
+{
+    object-fit: cover;
+}
+
+
+
+img.header_main_flower_img[src="../images/jpg/coley-christine-GyvMk5pPDXI-unsplash.jpg"]
+{
+    height: 504px;
+    width: 289px;
+}
+
+img.header_main_flower_img[src="../images/jpg/ab67616d00001e026a07073faabaaf523a1d3a95.jpg"]
+{
+    height: 251px;
+    width: 144.6666666666667px;
+}
+
+img.header_main_flower_img[src="../images/jpg/qtq70fmfjpeg-27.jpg"]
+{
+    height: 251px;
+    width: 144.6666666666667px;
+}
+
+img.header_main_flower_img[src="../images/jpg/Succulent_Terrarium_1.jpg"]
+{
+    height: 251px;
+    width: 289.3333333333333px;
+}
+
+img.header_main_flower_img[src="../images/jpg/unsplash-image-tVIqMgGlAG0.jpg"]
+{
+    height: 251px;
+    width: 289.3333333333333px;
+}
+
+img.header_main_flower_img[src="../images/png/img1_wsimg_com-isteam-stock-103535.png"]
+{
+    height: 251px;
+    width: 289.3333333333333px;
 }
