--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,7 @@
     height: auto;
     margin: auto;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .all_encompasing_element
