--- a/src/css/index.css
+++ b/src/css/index.css
@@ -36,22 +36,32 @@
     justify-content: right;
     column-gap: 3.75rem; /*60px*/
     width: 100%;
+    height: 100%;
 }
 
 .footer_button
 {
+    display: inline-block;
     border: none;
     background-color: inherit;
     color: inherit;
     font-weight: bold;
+    text-align: center;
 }
 
 .footer_button[data-type=header-footer]
 {
-    display: grid;
-    justify-content: left;
     width: 100%;
+    height: 100%;
     font-size: 1.125rem; /*18px*/
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.footer_button[data-type=header-footer]:hover
+{
+    color: rgb(255, 255, 255);
+    background-color: rgb(11, 133, 110);
 }
 
 .header_main_body
